Fixed small gap below menu

--- a/style-formulaire.css
+++ b/style-formulaire.css
@@ -38,7 +38,6 @@ a.logo {
 }
 
 .main {
-    position: absolute;
     z-index: 1;
     width: 100%;
     margin-top: 5%;
@@ -47,7 +46,7 @@ a.logo {
 }
 
 .right-bg {
-    position: absolute;
+    position: fixed;
     z-index: 2;
     top: 0;
     right: 0;
@@ -58,7 +57,7 @@ a.logo {
 }
 
 .left-bg {
-    position: absolute;
+    position: fixed;
     z-index: 2;
     top: 0;
     left: 0;
